--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,16 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/icono"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icono"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto_SHEM"
-        android:hardwareAccelerated="true"
         tools:targetApi="31">
+        <activity
+            android:name=".RecuperarContrasenaActivity"
+            android:exported="false" />
         <activity
             android:name=".MenuPrincipalActivity"
             android:exported="false" />
@@ -34,8 +37,7 @@
         <activity
             android:name=".ConsultaIngresoActivity"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity" />
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".InicioActivity"
             android:exported="true">
