--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,21 @@
         android:theme="@style/Theme.Proyecto_SHEM"
         tools:targetApi="31">
         <activity
+            android:name=".vista.DetalleSalidaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vista.HistorialIngresoUsuarioActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vista.DetalleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vista.ConsultaPermisoSalidaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vista.ConsultaPermisoIngresoActivity"
+            android:exported="false" />
+        <activity
             android:name=".vista.RegistroPermisoSalidaActivity"
             android:exported="false" />
         <activity
