--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Proyecto_SHEM"
         tools:targetApi="31">
         <activity
+            android:name=".vista.HistorialSalidaActivity"
+            android:exported="false" />
+        <activity
             android:name=".vista.DetalleSalidaActivity"
             android:exported="false" />
         <activity
